--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,7 @@ dependencies {
     compile 'com.zhy:autolayout:1.4.5'
     compile 'com.jakewharton:butterknife:8.5.1'
     compile 'com.android.support:support-v4:25.3.1'
+
     compile 'com.squareup.retrofit2:retrofit:2.2.1'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.2.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
@@ -98,4 +99,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     apt 'com.google.dagger:dagger-compiler:2.2'
     provided 'javax.annotation:jsr250-api:1.0'
+    /*
+    *加载动画
+     */
+    compile 'com.victor:lib:1.0.4'
 }
