--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,10 +10,10 @@ android {
         }
     }
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion "25.0.0"
     defaultConfig {
         applicationId "com.yunyou.yike"
-        minSdkVersion 19
+        minSdkVersion 17
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -27,6 +27,9 @@ android {
             //选择要添加的对应cpu类型的.so库。
             abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a'
             // 还可以添加 'x86', 'x86_64', 'mips', 'mips64'
+            // 如果 使用了 融云的音视频 必须过滤
+//            /**
+//             *    ndk {abiFilters "armeabi-v7a", "x86"}*/
         }
         manifestPlaceholders = [
                 JPUSH_PKGNAME: applicationId,
@@ -58,29 +61,16 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    // 支持 GIF 动图，需要添加
-    //autolayout  全局适配器
-    //注解fingdview框架
-    //retrofit2
-    //rxjava
-    //轮播图
-    // 下拉刷新框架
-    // 图片加载框架
-    // 切换布局 框架
-    //path动画
-    //    dagger2
-    //    百度地图jar包
     compile files('libs/BaiduLBS_Android.jar')
-    //    eventbus
-    //    极光//此处以JPush 3.0.5 版本为例。 // 此处以JCore 1.1.2 版本为例。
-    //    rxBinding
+    compile files('libs/MiPush_SDK_Client_3_2_2.jar')
+    compile files('libs/AMap_2DMap_V2.9.0_20160525.jar')
+    compile project(':IMKit')
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:support-vector-drawable:25.3.1'
     compile 'com.zhy:autolayout:1.4.5'
     compile 'com.jakewharton:butterknife:8.5.1'
     compile 'com.android.support:support-v4:25.3.1'
-
     compile 'com.squareup.retrofit2:retrofit:2.2.1'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.2.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
@@ -96,11 +86,10 @@ dependencies {
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'cn.jiguang.sdk:jpush:3.0.5'
     compile 'cn.jiguang.sdk:jcore:1.1.2'
+    compile 'com.victor:lib:1.0.4'
+    compile 'com.android.support.constraint:constraint-layout:1.0.1'
     testCompile 'junit:junit:4.12'
     apt 'com.google.dagger:dagger-compiler:2.2'
     provided 'javax.annotation:jsr250-api:1.0'
-    /*
-    *加载动画
-     */
-    compile 'com.victor:lib:1.0.4'
+
 }
