--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <meta-data
@@ -54,6 +54,23 @@
         <meta-data
             android:name="design_height"
             android:value="1334"/>
+
+        <!-- 高德地图   7ff07ef29f0c78801504d0828987e0fe -->
+        <meta-data
+            android:name="com.amap.api.v2.apikey"
+            android:value="7ff07ef29f0c78801504d0828987e0fe"/>
+        <!-- 融云 -->
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.yunyou.yike.FileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/rc_file_path"
+                />
+        </provider>
+
         <!-- 登陆界面 -->
         <activity
             android:name=".activity.LoginActivity"
@@ -77,7 +94,46 @@
             android:name=".activity.MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
-            android:launchMode="singleTop"/>
+            android:launchMode="singleTop">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+
+                <category android:name="android.intent.category.DEFAULT"/>
+
+                <data
+                    android:host="com.yunyou.yike"
+                    android:pathPrefix="/conversationlist"
+                    android:scheme="rong"/>
+            </intent-filter>
+        </activity>
+
+        <!--融云会话详情-->
+        <activity
+            android:name=".activity.ConversationActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden|adjustResize">
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data
+                    android:host="com.yunyou.yike"
+                    android:pathPrefix="/conversation/"
+                    android:scheme="rong" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data
+                    android:host="com.yunyou.yike"
+                    android:pathPrefix="/push_message"
+                    android:scheme="rong" />
+            </intent-filter>
+        </activity>
+
 
         <!-- 查看html 界面 -->
         <activity
@@ -117,19 +173,16 @@
         <activity
             android:name=".activity.MyYueActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"/>
-        <!--选择地址界面-->
+        <!-- 选择地址界面 -->
         <activity
             android:name=".activity.AddressActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:windowSoftInputMode="adjustNothing"
-            />
-        <!--地图选点界面-->
+            android:windowSoftInputMode="adjustNothing"/>
+        <!-- 地图选点界面 -->
         <activity
             android:name=".activity.MapAddressActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:windowSoftInputMode="adjustNothing"
-            />
-
+            android:windowSoftInputMode="adjustNothing"/>
 
         <!-- 百度地图开始 -->
         <service
@@ -145,130 +198,17 @@
 
         <!-- 百度地图结束 -->
 
-        //极光
-        <!-- 可配置android:process参数将PushService放在其他进程中 -->
-        <!-- <service -->
-        <!-- android:name="cn.jpush.android.service.PushService" -->
-        <!-- android:enabled="true" -->
-        <!-- android:exported="false"> -->
-        <!-- <intent-filter> -->
-        <!-- <action android:name="cn.jpush.android.intent.REGISTER"/> -->
-        <!-- <action android:name="cn.jpush.android.intent.REPORT"/> -->
-        <!-- <action android:name="cn.jpush.android.intent.PushService"/> -->
-        <!-- <action android:name="cn.jpush.android.intent.PUSH_TIME"/> -->
-        <!-- </intent-filter> -->
-        <!-- </service> -->
-
-
-        <!-- &lt;!&ndash; since 1.8.0 option 可选项。用于同一设备中不同应用的JPush服务相互拉起的功能。 &ndash;&gt; -->
-        <!-- &lt;!&ndash; 若不启用该功能可删除该组件，将不拉起其他应用也不能被其他应用拉起 &ndash;&gt; -->
-        <!-- <service -->
-        <!-- android:name="cn.jpush.android.service.DaemonService" -->
-        <!-- android:enabled="true" -->
-        <!-- android:exported="true"> -->
-        <!-- <intent-filter> -->
-        <!-- <action android:name="cn.jpush.android.intent.DaemonService"/> -->
-        <!-- <category android:name="${applicationId}"/> -->
-        <!-- </intent-filter> -->
-        <!-- </service> -->
-
-
-        <!-- &lt;!&ndash; Required SDK核心功能&ndash;&gt; -->
-        <!-- <receiver -->
-        <!-- android:name="cn.jpush.android.service.PushReceiver" -->
-        <!-- android:enabled="true"> -->
-        <!-- <intent-filter android:priority="1000"> -->
-        <!-- <action android:name="cn.jpush.android.intent.NOTIFICATION_RECEIVED_PROXY"/> -->
-        <!-- <category android:name="${applicationId}"/> -->
-        <!-- </intent-filter> -->
-        <!-- <intent-filter> -->
-        <!-- <action android:name="android.intent.action.USER_PRESENT"/> -->
-        <!-- <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/> -->
-        <!-- </intent-filter> -->
-        <!-- &lt;!&ndash; Optional &ndash;&gt; -->
-        <!-- <intent-filter> -->
-        <!-- <action android:name="android.intent.action.PACKAGE_ADDED"/> -->
-        <!-- <action android:name="android.intent.action.PACKAGE_REMOVED"/> -->
-
-
-        <!-- <data android:scheme="package"/> -->
-        <!-- </intent-filter> -->
-        <!-- </receiver> -->
-
-
-        <!-- &lt;!&ndash; Required SDK核心功能&ndash;&gt; -->
-        <!-- <activity -->
-        <!-- android:name="cn.jpush.android.ui.PushActivity" -->
-        <!-- android:configChanges="orientation|keyboardHidden" -->
-        <!-- android:exported="false" -->
-        <!-- android:theme="@android:style/Theme.NoTitleBar"> -->
-        <!-- <intent-filter> -->
-        <!-- <action android:name="cn.jpush.android.ui.PushActivity"/> -->
-
-
-        <!-- <category android:name="android.intent.category.DEFAULT"/> -->
-        <!-- <category android:name="${applicationId}"/> -->
-        <!-- </intent-filter> -->
-        <!-- </activity> -->
-        <!-- &lt;!&ndash; SDK核心功能&ndash;&gt; -->
-        <!-- <activity -->
-        <!-- android:name="cn.jpush.android.ui.PopWinActivity" -->
-        <!-- android:configChanges="orientation|keyboardHidden" -->
-        <!-- android:exported="false" -->
-        <!-- android:theme="@style/MyDialogStyle"> -->
-        <!-- <intent-filter> -->
-        <!-- <category android:name="android.intent.category.DEFAULT"/> -->
-        <!-- <category android:name="${applicationId}"/> -->
-        <!-- </intent-filter> -->
-        <!-- </activity> -->
-
-
-        <!-- &lt;!&ndash; Required SDK核心功能&ndash;&gt; -->
-        <!-- <service -->
-        <!-- android:name="cn.jpush.android.service.DownloadService" -->
-        <!-- android:enabled="true" -->
-        <!-- android:exported="false"> -->
-        <!-- </service> -->
-
-
-        <!-- &lt;!&ndash; Required SDK核心功能&ndash;&gt; -->
-        <!-- <receiver android:name="cn.jpush.android.service.AlarmReceiver"/> -->
-
-
-        <!-- &lt;!&ndash; User defined. 用户自定义的广播接收器&ndash;&gt; -->
-        <!-- &lt;!&ndash;<receiver&ndash;&gt; -->
-        <!-- &lt;!&ndash;android:name="您自己定义的Receiver"&ndash;&gt; -->
-        <!-- &lt;!&ndash;android:enabled="true">&ndash;&gt; -->
-        <!-- &lt;!&ndash;<intent-filter>&ndash;&gt; -->
-        <!-- &lt;!&ndash;&lt;!&ndash;Required 用户注册SDK的intent&ndash;&gt;&ndash;&gt; -->
-        <!-- &lt;!&ndash;<action android:name="cn.jpush.android.intent.REGISTRATION"/>&ndash;&gt; -->
-        <!-- &lt;!&ndash;&lt;!&ndash;Required 用户接收SDK消息的intent&ndash;&gt;&ndash;&gt; -->
-        <!-- &lt;!&ndash;<action android:name="cn.jpush.android.intent.MESSAGE_RECEIVED"/>&ndash;&gt; -->
-        <!-- &lt;!&ndash;&lt;!&ndash;Required 用户接收SDK通知栏信息的intent&ndash;&gt;&ndash;&gt; -->
-        <!-- &lt;!&ndash;<action android:name="cn.jpush.android.intent.NOTIFICATION_RECEIVED"/>&ndash;&gt; -->
-        <!-- &lt;!&ndash;&lt;!&ndash;Required 用户打开自定义通知栏的intent&ndash;&gt;&ndash;&gt; -->
-        <!-- &lt;!&ndash;<action android:name="cn.jpush.android.intent.NOTIFICATION_OPENED"/>&ndash;&gt; -->
-        <!-- &lt;!&ndash;&lt;!&ndash; 接收网络变化 连接/断开 since 1.6.3 &ndash;&gt;&ndash;&gt; -->
-        <!-- &lt;!&ndash;<action android:name="cn.jpush.android.intent.CONNECTION"/>&ndash;&gt; -->
-        <!-- &lt;!&ndash;<category android:name="${applicationId}"/>&ndash;&gt; -->
-        <!-- &lt;!&ndash;</intent-filter>&ndash;&gt; -->
-        <!-- &lt;!&ndash;</receiver>&ndash;&gt; -->
-
-
-        <!-- &lt;!&ndash; Required. For publish channel feature &ndash;&gt; -->
-        <!-- &lt;!&ndash; JPUSH_CHANNEL 是为了方便开发者统计APK分发渠道。&ndash;&gt; -->
-        <!-- &lt;!&ndash; 例如: &ndash;&gt; -->
-        <!-- &lt;!&ndash; 发到 Google Play 的APK可以设置为 google-play; &ndash;&gt; -->
-        <!-- &lt;!&ndash; 发到其他市场的 APK 可以设置为 xxx-market。 &ndash;&gt; -->
-        <!-- &lt;!&ndash; 渠道统计报表位于控制台页面的 “统计”-“用户统计”-“渠道分布” 中&ndash;&gt; -->
-        <!-- <meta-data -->
-        <!-- android:name="JPUSH_CHANNEL" -->
-        <!-- android:value="developer-default"/> -->
-        <!-- &lt;!&ndash; Required. AppKey copied from Portal &ndash;&gt; -->
-        <!-- <meta-data -->
-        <!-- android:name="JPUSH_APPKEY" -->
-        <!-- android:value="9d8d7872b2404226dd2c0d50"/> -->
-
+       <!--融云自定义广播接收器-->
+        <receiver
+            android:exported="true"
+            android:name=".RongIM.RongIMNotificationReceive">
+            <intent-filter>
+                <action android:name="io.rong.push.intent.MESSAGE_ARRIVED" />
+                <action android:name="io.rong.push.intent.MI_MESSAGE_ARRIVED" />
+                <action android:name="io.rong.push.intent.MESSAGE_CLICKED" />
+                <action android:name="io.rong.push.intent.MI_MESSAGE_CLICKED" />
+            </intent-filter>
+        </receiver>
 
     </application>
 
